--- a/src/styles/Report.scss
+++ b/src/styles/Report.scss
@@ -4,15 +4,21 @@
     height: 80%;
     
     margin: 20px auto;
-    .form-report{
-        width: 40%;
-        // border: 1px solid;
+   .form-report{
+    display: flex;
+    width: 100%;
+    .container-left{
+        width: 60%;
+       
         .block-reporter{
             width: 100%;
             display: flex;
-            flex-direction: column;
+            // flex-direction: column;
+            align-items: center;
             .select-reporter{
-                width: 50%;
+                width: 25%;
+                height: 30px;
+                margin: 0px 10px;
             }
         }
         .block-reported{
@@ -23,7 +29,8 @@
             .radio-sel{
                 display: flex;
                 flex-direction: column;
-                height: 250px;
+                width: 200px;
+                height: 230px;
                 justify-content: space-around;
             }
             .message{
@@ -32,15 +39,21 @@
             }
         }
 
+
     }
     .form-right{
-        width: 50%;
-        background-color: #9e9e9e;
+        width: 40%;
+        background-color: #f5f5f5
+        ;
         margin-left: auto;
         border-radius: 20px;
-        
+        .row{
+            margin: 20px;
+        }
     }
+   }
+
 }
 span.title{
-    margin: 20px 0px
+    margin: 15px 0px
 }
