--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 
 .container-root{
     display: flex;
-    min-height: 100vh;
+    height: 90vh;
     width: 100vw;
 }
 
 .right-container{
-    width: 100%;
+    width: 95%;
 }
