--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -2,9 +2,12 @@
  height: 70px ;
  width: 100%;
  display: flex;
- justify-content: flex-end;
+ justify-content: space-between;
  align-items: center;
  background-color: #f5f5f5;
+ .btn-back{
+   margin-left: 20px;
+ }
    .btn-logout{
       margin-right: 20px;
    }
